--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,12 @@ Package: DIDdesign
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(
+  person("Naoki", "Egami", email = "email@gmail.com", role = c("aut")),
+  person("Soichiro", "Yamauchi", email = "email@gmail.com", role = c("aut", "cre"))
+  )
+Description: A package to analyze difference-in-differences design.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
