--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DIDdesign
 Type: Package
-Title: What the Package Does (Title Case)
+Title: R package for analysing and diagnosing difference-in-differences design.
 Version: 0.1.0
 Authors@R: c(
   person("Naoki", "Egami", email = "email@gmail.com", role = c("aut")),
