working on did function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ S3method(plot,diddesign)
 S3method(summary,diddesign)
 export(did)
 export(did_data)
+importFrom(Formula,as.Formula)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl_df)
 importFrom(plm,pdata.frame)
