--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ S3method(plot,diddesign)
 S3method(summary,diddesign)
 export(did)
 export(did_data)
+export(didgmmT)
+export(didgmm_test)
+export(trendT_test)
 importFrom(Formula,as.Formula)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
