before parametric function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,diddesign)
 S3method(summary,diddesign)
 export(did)
 export(did_data)
+export(did_plot)
 export(didgmmT)
 export(didgmm_test)
 export(trendT_test)
