first round parametric function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(plot,diddesign)
 S3method(summary,diddesign)
 export(did)
 export(did_data)
+export(did_parametric)
 export(did_plot)
 export(didgmmT)
 export(didgmm_test)
 export(trendT_test)
 importFrom(Formula,as.Formula)
+importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
@@ -16,5 +18,8 @@ importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl_df)
 importFrom(plm,pdata.frame)
+importFrom(plm,plm)
+importFrom(plm,pmodel.response)
 importFrom(tidyr,spread)
 importFrom(utils,getFromNamespace)
+useDynLib(DIDdesign)
