introduce parametric selection method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(dplyr,tbl_df)
 importFrom(plm,pdata.frame)
 importFrom(plm,plm)
 importFrom(plm,pmodel.response)
+importFrom(plm,vcovHC)
 importFrom(tidyr,spread)
 importFrom(utils,getFromNamespace)
 useDynLib(DIDdesign)
