RCS in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,12 @@ S3method(summary,diddesign)
 export(did)
 export(did_data)
 export(did_parametric)
+export(did_parametric_repeatedCS)
 export(did_plot)
 export(didgmmT)
+importFrom(CVXR,Minimize)
+importFrom(CVXR,Problem)
+importFrom(CVXR,Variable)
 importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
@@ -15,6 +19,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl_df)
+importFrom(genlasso,getDtf)
 importFrom(plm,pdata.frame)
 importFrom(plm,plm)
 importFrom(plm,pmodel.response)
