rcs working version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,4 +26,6 @@ importFrom(plm,pmodel.response)
 importFrom(plm,vcovHC)
 importFrom(tidyr,spread)
 importFrom(utils,getFromNamespace)
+importMethodsFrom(CVXR,"%*%")
+importMethodsFrom(CVXR,psolve)
 useDynLib(DIDdesign)
