--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,26 +3,32 @@ Type: Package
 Title: R package for analyzing and diagnosing difference-in-differences design.
 Version: 0.1.1
 Authors@R: c(
-  person("Naoki", "Egami", email = "email@gmail.com", role = c("aut")),
-  person("Soichiro", "Yamauchi", email = "email@gmail.com", role = c("aut", "cre"))
-  )
+  person("Naoki", "Egami", email = "email@gmail.com", role = c("aut")
+  ),
+  person("Soichiro", "Yamauchi", email = "email@gmail.com", role = c("aut", "cre"),
+    comment = c(ORCID = "0000-0003-0554-2717")
+  ))
 Description: A package to analyze difference-in-differences design.
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-LinkingTo: 
+LinkingTo:
     Rcpp,
     RcppArmadillo
-Imports: 
+Imports:
     CVXR,
-    Formula, 
+    Formula,
     genlasso,
-    dplyr, 
+    dplyr,
     plm,
     tidyr,
     Rcpp,
     RcppArmadillo
 BugReports: https://github.com/naoki-egami/DIDdesign/issues
-Suggests: 
-    testthat
+URL: https://github.com/naoki-egami/DIDdesign
+Suggests:
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
