--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,3 +13,5 @@ navbar:
       href: articles/articles/diddesign.html
     - text: Reference
       href: reference/index.html
+    - text: Changelog
+      href: news/index.html 
