rcs data function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(plm,pmodel.response)
 importFrom(plm,vcovHC)
 importFrom(tidyr,spread)
 importFrom(utils,getFromNamespace)
+importFrom(zoo,zoo)
 importMethodsFrom(CVXR,"%*%")
 importMethodsFrom(CVXR,psolve)
 useDynLib(DIDdesign)
