add rcs function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,9 @@ S3method(summary,diddesign)
 export(did)
 export(did_data)
 export(did_parametric)
-export(did_parametric_repeatedCS)
+export(did_parametric_rcs)
 export(did_plot)
 export(didgmmT)
-importFrom(CVXR,Minimize)
-importFrom(CVXR,Problem)
-importFrom(CVXR,Variable)
 importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
@@ -19,7 +16,6 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,tbl_df)
-importFrom(genlasso,getDtf)
 importFrom(plm,pdata.frame)
 importFrom(plm,plm)
 importFrom(plm,pmodel.response)
@@ -27,6 +23,4 @@ importFrom(plm,vcovHC)
 importFrom(tidyr,spread)
 importFrom(utils,getFromNamespace)
 importFrom(zoo,zoo)
-importMethodsFrom(CVXR,"%*%")
-importMethodsFrom(CVXR,psolve)
 useDynLib(DIDdesign)
