--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,11 @@ importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,tbl_df)
 importFrom(plm,pdata.frame)
 importFrom(plm,plm)
