--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: R package for analyzing and diagnosing difference-in-differences design.
 Version: 0.1.3
 Date: 2019-03-02
 Authors@R: c(
-  person("Naoki", "Egami", email = "email@gmail.com", role = c("aut")
+  person("Naoki", "Egami", email = "email@gmail.com", role = c("aut"),
+    comment = c(ORCID = "0000-0002-5491-2174")
   ),
   person("Soichiro", "Yamauchi", email = "email@gmail.com", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0003-0554-2717")
