update did_nonparametric manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,diddesign)
 S3method(summary,diddesign)
 export(did)
 export(did_data)
+export(did_nonparametric)
 export(did_parametric)
 export(did_parametric_rcs)
 export(did_plot)
