fix labeling issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(did_nonparametric)
 export(did_parametric)
 export(did_parametric_rcs)
 export(did_plot)
+export(did_plot_selection)
 importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
