--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
-pandoc: 1.19.2.1
+pandoc: 1.17.2
 pkgdown: 1.3.0
 pkgdown_sha: ~
 articles:
   diddesign: articles/diddesign.html
+  introduction: articles/introduction.html
 
