--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,select_)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tbl_df)
 importFrom(plm,pdata.frame)
