--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 1.3.0
 pkgdown_sha: ~
 articles:
   diddesign: articles/diddesign.html
+  diddesign_rcs: articles/diddesign_rcs.html
   introduction: articles/introduction.html
 
