--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(did_plot)
 export(did_plot_selection)
 importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
+importFrom(cli,cat_rule)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
