add selection procedure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(did_parametric)
 export(did_parametric_rcs)
 export(did_plot)
 export(did_plot_selection)
+export(sign_test)
 importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
 importFrom(cli,cat_rule)
@@ -23,6 +24,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tbl_df)
+importFrom(dplyr,ungroup)
 importFrom(plm,pdata.frame)
 importFrom(plm,plm)
 importFrom(plm,pmodel.response)
