--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(did_parametric)
 export(did_parametric_rcs)
 export(did_plot)
 export(did_plot_selection)
+export(sa_did_est)
 export(sign_test)
+import(panelr)
 importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
 importFrom(cli,cat_rule)
@@ -29,6 +31,8 @@ importFrom(plm,pdata.frame)
 importFrom(plm,plm)
 importFrom(plm,pmodel.response)
 importFrom(plm,vcovHC)
+importFrom(rlang,"!!")
+importFrom(rlang,sym)
 importFrom(utils,getFromNamespace)
 importFrom(zoo,zoo)
 useDynLib(DIDdesign)
