--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(did_plot_selection)
 export(sa_did_est)
 export(sign_test)
 import(panelr)
+import(plm)
 importFrom(Formula,as.Formula)
 importFrom(Rcpp,sourceCpp)
 importFrom(cli,cat_rule)
