--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(plm,pmodel.response)
 importFrom(plm,vcovHC)
 importFrom(rlang,"!!")
 importFrom(rlang,sym)
+importFrom(tibble,as_tibble)
 importFrom(utils,getFromNamespace)
 importFrom(zoo,zoo)
 useDynLib(DIDdesign)
