Add tibble and zoo to decription for travis check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,12 @@ Imports:
     tidyr,
     Rcpp,
     RcppArmadillo,
-    rlang
+    rlang,
+    future,
+    future.apply,
+    purrr,
+    zoo, 
+    tibble
 Suggests:
     testthat,
     knitr,
