--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,15 @@
 export(did_new)
 export(sa_did_est)
 import(Formula)
+import(plm)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,all_of)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,lag)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
@@ -25,4 +29,5 @@ importFrom(rlang,"!!")
 importFrom(rlang,.data)
 importFrom(rlang,sym)
 importFrom(tibble,as_tibble)
+importFrom(tidyr,pivot_wider)
 useDynLib(DIDdesign)
