--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
-importFrom(future,multiprocess)
+importFrom(future,multicore)
 importFrom(future,plan)
 importFrom(future,sequential)
 importFrom(future.apply,future_lapply)
