Update manual and docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(future,plan)
 importFrom(future,sequential)
 importFrom(future.apply,future_lapply)
 importFrom(plm,plm)
+importFrom(purrr,map)
 importFrom(purrr,map_dbl)
 importFrom(rlang,"!!")
 importFrom(rlang,.data)
