--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -15,6 +15,7 @@ name: R-CMD-check
 jobs:
   R-CMD-check:
     runs-on: macOS-latest
+    if: "contains(toJSON(github.event.commits.*.message), '[build]')"    
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
