--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 S3method(print,summary.DIDdesign)
 S3method(summary,DIDdesign)
 export(did)
+export(did_check)
 import(Formula)
 importFrom(cli,cat_rule)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
@@ -24,6 +26,13 @@ importFrom(future,multicore)
 importFrom(future,plan)
 importFrom(future,sequential)
 importFrom(future.apply,future_lapply)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme_bw)
 importFrom(purrr,map)
 importFrom(purrr,map_dbl)
 importFrom(rlang,"!!")
