--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ importFrom(cli,cat_rule)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -27,11 +28,14 @@ importFrom(future,plan)
 importFrom(future,sequential)
 importFrom(future.apply,future_lapply)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(purrr,map)
 importFrom(purrr,map_dbl)
