--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,10 @@ importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,xlim)
 importFrom(purrr,map)
 importFrom(purrr,map_dbl)
 importFrom(rlang,"!!")
