--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(plot,DIDdesign)
 S3method(plot,DIDdesign_check)
 S3method(print,summary.DIDdesign)
+S3method(print,summary.DIDdesign_check)
 S3method(summary,DIDdesign)
+S3method(summary,DIDdesign_check)
 export(did)
 export(did_check)
 import(Formula)
