--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,13 @@ importFrom(purrr,map_dbl)
 importFrom(rlang,"!!")
 importFrom(rlang,.data)
 importFrom(rlang,sym)
+importFrom(stats,as.formula)
+importFrom(stats,cov)
+importFrom(stats,lm)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
+importFrom(stats,sd)
+importFrom(stats,update)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_wider)
