Update documentations to respond to CRAN submission comments
- Add `@param` tags to all functions including internal functions.
- Add `@return` tags to all functions, thought descriptions are not precise.
- Update DESCRIPTION file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DIDdesign
 Type: Package
-Title: R Package for Analyzing and Diagnosing Difference-in-Differences Design
+Title: Analyzing and Diagnosing the Difference-in-Differences Design
 Version: 0.3.2
 Date: 2021-01-18
 Authors@R: c(
