--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: DIDdesign
 Type: Package
 Title: Analyzing and Diagnosing the Difference-in-Differences Design
-Version: 0.3.2
-Date: 2021-01-18
+Version: 0.3.3
+Date: 2021-02-25
 Authors@R: c(
   person("Naoki", "Egami", email = "naoki.egami5@gmail.com", role = c("aut"),
     comment = c(ORCID = "0000-0002-5491-2174")
@@ -10,7 +10,7 @@ Authors@R: c(
   person("Soichiro", "Yamauchi", email = "syamauchi@g.harvard.edu", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0003-0554-2717")
   ))
-Description: Statistical tools for analyzing and diagnosing difference-in-differences design.
+Description: Statistical tools for analyzing and diagnosing the difference-in-differences design and the staggered adoption design. The methods implemented in this package is proposed in Egami and Yamauchi (2019) <arXiv:2102.09948>
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
