--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,8 +60,10 @@ importFrom(stats,cov)
 importFrom(stats,lm)
 importFrom(stats,pnorm)
 importFrom(stats,qnorm)
+importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,update)
+importFrom(stats,var)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_wider)
