--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,9 +13,9 @@
             // You can add each of these individually or jointly. See the table at
             // https://github.com/rocker-org/devcontainer-features/blob/main/src/r-apt/README.md#options
             "installRadian": false,
-            "installDevTools": false,
-            "installRMarkdown": false,
-            "installVscDebugger": false,
+            "installDevTools": true,
+            "installRMarkdown": true,
+            "installVscDebugger": true,
             "useTesting": false
         }
 
@@ -49,7 +49,11 @@
     //
     // Use 'postCreateCommand' to run commands after the container is created.
     "postCreateCommand": "R -q -e 'install.packages(\"tidyverse\")'",
-
+    "postCreateCommand": "R -q -e 'install.packages(\"future\")'",    
+    "postCreateCommand": "R -q -e 'install.packages(\"future.apply\")'",
+    "postCreateCommand": "R -q -e 'install.packages(\"Formula\")'",
+    "postCreateCommand": "R -q -e 'install.packages(\"patchwork\")'",
+    
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     // "remoteUser": "root"
 
