--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,11 +48,7 @@
     // "forwardPorts": [ 8787 ],
     //
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "R -q -e 'install.packages(\"tidyverse\")'",
-    "postCreateCommand": "R -q -e 'install.packages(\"future\")'",    
-    "postCreateCommand": "R -q -e 'install.packages(\"future.apply\")'",
-    "postCreateCommand": "R -q -e 'install.packages(\"Formula\")'",
-    "postCreateCommand": "R -q -e 'install.packages(\"patchwork\")'",
+    "postCreateCommand": "R -q -e 'install.packages(c(\"tidyverse\", \"future\", \"future.apply\", \"Formula\", \"patchwork\")'",
     
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     // "remoteUser": "root"
